--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
     margin: 0;
     border: 0;
     box-sizing: border-box;
-    outline: 0.1px dotted red;
+    /* outline: 0.1px dotted red; */
 }
 
 html, body {
