--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
     margin: 0;
     border: 0;
     box-sizing: border-box;
-    /* outline: 0.1px dotted red; */
+    outline: 0.1px dotted red;
 }
 
 html, body {
@@ -192,6 +192,10 @@ button:hover {
 .heading-description-container .heading-text {
     font-size: 1.1rem;
     padding: 1rem 0 2rem 0;
+}
+
+.heading-description-container button {
+    margin-bottom: 2rem;
 }
 
 /* form section start */
